# RimvalePC

./: .gitignore  BUILD_INSTRUCTIONS.md  CREATURE_ART_PROMPTS.md  CREATURE_ART_PROMPTS.txt  HANDOFF.md  MANUAL_AUDIT.md  PARITY_PLAN.md  REGIONAL_NPCS_DESIGN.md  Rimvale_Implementation_WriteUp.docx  Rimvale_Testing_Checklist.docx  Rimvale_Testing_Checklist_v2.docx  build_dll.bat  build_log.txt  check_dll.bat  detect.bat  detect_log.txt  diagnose.bat  diagnose_dll.bat  diagnose_dll.ps1  diagnose_log.txt  dump_api_and_rebuild.bat  export_presets.cfg  icon.svg.import  launch_with_extension.bat  local_config.bat.example  nuclear_rebuild.bat  project.godot  rebuild_dll.bat  rimvale_gameplan.docx  run_diagnostic.bat  update_godotcpp_and_rebuild.bat  upload_to_github.bat  ~$mvale_Testing_Checklist.docx  ~$mvale_Testing_Checklist_v2.docx
addons/rimvale_engine/: rimvale_engine.gdextension  rimvale_engine.gdextension.uid
assets/characters/: abyssari.png.import  aetherian.png.import  arcanite_human.png.import  archivist.png.import  argent_dvarrim.png.import  ashenborn.png.import  ashrot_human.png.import  auroran.png.import  beetlefolk.png.import  bespoker.png.import  bilecrawler.png.import  blackroot.png.import  blightmire.png.import  bloatfen_whisperer.png.import  blood_spawn.png.import  bloodsilk_human.png.import  bogtender.png.import  bookborn.png.import  boreal_human.png.import  bouncian.png.import  brain_eater.png.import  bramblekin.png.import  candlites.png.import  canidar.png.import  carrionari.png.import  cervin.png.import  chokeling.png.import  chronogears.png.import  cindervolk.png.import  cloudling.png.import  convergents.png.import  corrupted_wyrmblood.png.import  corvian.png.import  cragborn_human.png.import  crimson_veil.png.import  cryptkin_human.png.import  disjointed_hounds.png.import  drakari.png.import  dreamer.png.import  dregspawn.png.import  (+129 more)
autoload/: character_model_builder.gd  creature_size.gd  game_state.gd  game_state.gd.uid  kaiju_system.gd  militia_system.gd  mob_system.gd  npc_backstories.gd  rimvale_colors.gd  rimvale_colors.gd.uid  rimvale_engine_singleton.gd  rimvale_engine_singleton.gd.uid  rimvale_fallback_engine.gd  rimvale_utils.gd  rimvale_utils.gd.uid  world_data.gd  world_systems.gd
gdextension/: CMakeLists.txt
gdextension/src/: AndroidOut.cpp  AndroidOut.h  Armor.h  Base.h  Behavior.cpp  Behavior.h  CMakeLists.txt  Character.cpp  Character.h  CharacterCreator.h  CharacterRegistry.h  CombatManager.cpp  CombatManager.h  Cosmic.h  Creature.h  CreatureRegistry.h  Dice.h  Dungeon.h  Faction.h  Feats.h  Injuries.h  Inventory.h  Item.h  ItemRegistry.h  LineageRegistry.h  Magic.h  Militia.h  Mob.h  Model.h  NPC.h  NpcRegistry.h  Quest.h  Renderer.cpp  Renderer.h  Settlement.h  Shader.cpp  Shader.h  SocietalRoleRegistry.h  SpellRegistry.h  Stats.h  (+14 more)
scenes/character_creation/: character_creation.gd  character_creation.gd.uid  character_creation.tscn
scenes/codex/: codex.gd  codex.gd.uid  codex.tscn
scenes/combat/: combat.gd  combat.gd.uid  combat.tscn
scenes/dungeon/: dungeon.gd  dungeon.tscn
scenes/explore/: explore.gd  explore.gd.bak  explore.tscn  explore_maps.gd  regional_dialogues.gd  regional_npcs.gd
scenes/hub/: hub.gd  hub.gd.uid  hub.tscn
scenes/inventory/: inventory.gd  inventory.gd.uid  inventory.tscn
scenes/level_up/: level_up.gd  level_up.gd.uid  level_up.tscn
scenes/main/: main.gd  main.gd.uid  main.tscn
scenes/main_menu/: main_menu.gd  main_menu.gd.uid  main_menu.tscn
scenes/popups/: base_popup.gd  crafting_popup.gd  foraging_popup.gd  rituals_popup.gd
scenes/profile/: profile.gd  profile.gd.uid  profile.tscn
scenes/shop/: shop.gd  shop.gd.uid  shop.tscn
scenes/team/: team.gd  team.gd.uid  team.tscn
scenes/test/: debug_monitor.gd  engine_test.gd  engine_test.gd.uid  engine_test.tscn
scenes/title/: title_screen.gd  title_screen.tscn
scenes/world/: world.gd  world.gd.uid  world.tscn
